# PJI510-2026S1-Turma001

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py  0002_hypertables_timescaledb.py  0003_continuous_aggregates.py  0004_add_condicao_leitura_climatica.py  0005_piscinao_romano.py  0006_energia_estado_leitura_sensor.py  0007_add_profundidade_reservatorio.py  0008_alertas_externos.py  0009_corrigir_capacidade_piscinao.py  0010_bombas_drenagem.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: exceptions.py  security.py
backend/app/modules/alertas/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/alertas_externos/: __init__.py  consumer.py  models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/clima/: client.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/core/: exceptions.py  middleware.py  security.py
backend/app/modules/dashboard/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/geo/: router.py
backend/app/modules/ingestao/: consumer.py  models.py  (+4 more)
backend/app/worker/: tasks.py
backend/scripts/: seed_dev.sql
backend/tests/: conftest.py
backend/tests/integration/: test_alertas.py  test_ingestao.py
backend/tests/unit/: conftest.py  test_processamento_policies.py
(+66 files in other folders)
